<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimns_130dp"
            android:layout_height="@dimen/dimns_130dp"
            android:layout_marginTop="@dimen/dimns_80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/recieve"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimns_24dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/dimns_24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimns_50dp"
            android:layout_marginEnd="@dimen/dimns_50dp"
            android:layout_marginTop="@dimen/dimns_8dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_to"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/dimns_14sp"/>

        <TextView
            android:id="@+id/activity_verify_otp_tv_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimns_50dp"
            android:layout_marginEnd="@dimen/dimns_50dp"
            android:layout_marginTop="@dimen/dimns_4dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/dimns_14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimns_32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_verify_otp_et_code_1"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimns_24sp"
                android:textStyle="bold"
                android:theme="@style/EditTextStyle"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/activity_verify_otp_et_code_2"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimns_4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimns_24sp"
                android:textStyle="bold"
                android:theme="@style/EditTextStyle"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/activity_verify_otp_et_code_3"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimns_4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimns_24sp"
                android:textStyle="bold"
                android:theme="@style/EditTextStyle"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/activity_verify_otp_et_code_4"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimns_4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimns_24sp"
                android:textStyle="bold"
                android:theme="@style/EditTextStyle"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/activity_verify_otp_et_code_5"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimns_4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimns_24sp"
                android:textStyle="bold"
                android:theme="@style/EditTextStyle"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/activity_verify_otp_et_code_6"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimns_4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimns_24sp"
                android:textStyle="bold"
                android:theme="@style/EditTextStyle"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimns_24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/dimns_14sp"/>

            <TextView
                android:id="@+id/activity_verify_otp_tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimns_8dp"
                android:text="@string/resend_otp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimns_15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activity_send_otp_btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimns_32dp"
                android:background="@drawable/shape_bg_button"
                android:text="@string/verify"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimns_16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/activity_verify_otp_pb_loading"
                android:layout_width="@dimen/dimns_40dp"
                android:layout_height="@dimen/dimns_40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>




    </LinearLayout>

</ScrollView>